# grepwalk

./: Makefile.in  README.md  configure  configure.ac  default.h.in  default.h.in~
autom4te.cache/: output.0  output.1  output.2  output.3  requests  traces.0  traces.1  traces.2  traces.3
src/: Makefile.am  Makefile.in  count_bases.c  defaults.h  examine_reads.c  examine_reads.h  grepwalk.c  merge_fastq.c  print_bases.c  print_usage.c  read_reads.c  trim_bases.c
